--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack --config webpack.build.config.js",
+    "start": "webpack --config webpack.config.js --progress --colors --watch",
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "webpack": "1.13.0",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
-    "babel-preset-stage-0": "6.5.0"
+    "babel-preset-stage-0": "6.5.0",
+    "webpack": "1.13.0"
   },
   "repository": {
     "type": "git",
