--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "The official Firebase module for Cerebral",
   "main": "dist/index.js",
   "scripts": {
-    "build": "webpack --config webpack.build.config.js",
-    "start": "webpack --config webpack.config.js --progress --colors --watch",
-    "prepublish": "npm run build"
+    "dev": "webpack --config webpack.config.js --watch",
+    "dist": "webpack --config webpack.dist.config.js",
+    "prepublish": "npm run dist"
   },
   "devDependencies": {
     "babel-loader": "6.2.4",
